feat: Check CODEOWNERS against Gitlab users, groups, roles and their permissions.